# norma

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
examples/: whisper-mic.rs
src/: blocking.rs  dtype.rs  input.rs  lib.rs  main.rs  mic.rs  model.rs  utils.rs
src/model/: dummy.rs  mod.rs  whisper.rs
src/models/: mock.rs  mod.rs
src/models/whisper/: languages.rs  mod.rs  model.rs  monolingual.rs  multilingual.rs
tests/: transcriber.rs
