[package]
name = "norma"
version = "0.0.1"
edition = "2021"
rust-version = "1.77"
authors = ["Mike Ivanichev <mike@netstalker.dev>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/MikeIvanichev/norma"
homepage = "https://github.com/MikeIvanichev/norma"
description = "A pure Rust speech to text library"
categories = ["multimedia::audio"]
keywords = ["stt", "ai", "whisper", "transcription"]

[dependencies]
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
hf-hub = { version = "0.3.2", features = ["tokio"] }
cpal = "0.15.3"
serde = "1.0.202"
thiserror = "1.0.61"
dasp_sample = "0.11.0"
dasp_frame = "0.11.0"
dasp_signal = "0.11.0"
dasp_ring_buffer = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["sinc"] }
thingbuf = "0.1.6"
tracing = { version = "0.1.40" }
tokio = { version = "1.38.0", features = ["sync"] }
tokenizers = { version = "0.19.1" }
rand = "0.8.5"
serde_json = "1.0.119"
byteorder = "1.5.0"
strum = { version = "0.26.3", features = ["derive"] }
jod-thread = "0.1.2"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }

# for minimal-versions
[target.'cfg(any())'.dependencies]
openssl = { version = "0.10.55", optional = true }
spm_precompiled = { version = "0.1.3", optional = true } # issue in tokenizers (uses v0.1, needs 0.1.3)

[features]
default = []
# Require cuda
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
flash-attn = ["cuda", "candle-transformers/flash-attn"]
# Require cudnn
cudnn = ["cuda", "candle-core/cudnn"]
# Only applicable to MacOS
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = [
  "candle-core/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
